# BirdNET-Analyzer

./: README.md  analyze.py  config.py  installation_macos.txt  pyproject.toml
birdnet_analyzer_4rpi/: analyze.py  audio.py  config.py  embeddings.py  error_log.txt  gui.py  model.py  server.py  species.py  test.py
birdnet_analyzer_4rpi/checkpoints/Hawaii_V2.0/: BirdNET_Hawaii_V2.0_Labels.txt
example/: results_audacity.csv  results_csv.csv  results_r.csv  soundscape.BirdNET.selection.table.txt
