[tool.poetry]
name = "birdnet-analyzer-4rpi"
version = "0.1.0"
description = "Python package for BirdNET-Analyzer"
license = "CC BY-NC-SA 4.0"
authors = ["Florian Stehr <florian.stehr@gmail.com>"]
readme = "README.md"
packages = [{include = "birdnet_analyzer_4rpi"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "^2.11.0"
librosa = "^0.9.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
